front/src/components/DataTableNext/index.css
:local .tableHeader > th, .tableBody > td {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

:local .tableHeader {
  background-color: #898787;
  border: none;
  color: white;
}

:local .tableHeader > th {
  text-align: center !important;
  vertical-align: middle !important;
  white-space: unset !important;
  font-weight: 400;
}

:local .tableBody {
  cursor: pointer;
}

:local .tableBody > td {
  vertical-align: middle;
}

:local .label {
  border-radius: 0;
  font-size: 90%;
  font-weight: bold;
  padding: 4px 7px;
}

:local .searchBar {
  composes: formControl from '../../utils/forms/index.css';
  height: 30px;
}

:local .exportCsv {
  composes: button from '../Button/index.css';
}

:local .tableModalContainer {
  text-align: left;
}

:local .limitFormatter {
  overflow: inherit;
  text-overflow: inherit;
  white-space: inherit;
}

:local .buttonWrapper {
  display: inline-block;
}

:local .tableOptions {
  margin-bottom: 5px;
}

